Fourth commit - Created functionality for buttons to be created after a city is searched for. Worked with API integration, cities can be searched for and weather infomation for that city will be displayed on the webpage. Having one issue with overlapping city information in the text fields though, need to address.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,3 +33,16 @@ body {
 .currentCityWeatherStats {
     font-size: 22px;
 }
+
+.oldSearchBtn {
+    background-color:rgb(21, 17, 46) ;
+    border-radius: 15px;
+}
+
+.oldSearchBtn:hover {
+    background-color: rgb(12, 12, 67);
+}
+
+.oldSearchBtn:active {
+    background-color: rgb(48, 48, 90);
+}
